<resources>
    <string name="app_name" translatable="false">Super POS</string>
    <string name="text_french" translatable="false">French</string>
    <string name="text_english" translatable="false">English</string>
    <string name="text_bangla" translatable="false">বাংলা</string>
    <string name="text_spanish" translatable="false">Spanish</string>
    <string name="text_hindi" translatable="false"> हिंदी </string>
    <string name="admob_application_id" translatable="false">ca-app-pub-5657501787263234~9247968350</string>
    <string name="admob_banner_ads_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="action_settings">Settings</string>
    <string name="suppliers">Suppliers</string>
    <string name="customers">Customers</string>
    <string name="pos">POS</string>
    <string name="expense">Expense</string>
    <string name="report">Report</string>
    <string name="all_orders">All Orders</string>
    <string name="all_sales">All Sales</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_cell">Customer Cell</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_address">Customer Address</string>
    <string name="add_customer">Add Customer</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_customer_cell">Enter Customer Cell</string>
    <string name="enter_customer_address">Enter Customer Address</string>
    <string name="customer_successfully_added">Customer Successfully Added</string>
    <string name="all_customer">All Customer</string>
    <string name="all_suppliers">All Suppliers</string>
    <string name="add_suppliers">Add Suppliers</string>
    <string name="enter_suppliers_name">Enter Suppliers Name</string>
    <string name="enter_suppliers_contact_person_name">Enter Suppliers Contact Person Name</string>
    <string name="enter_suppliers_cell">Enter Suppliers Cell</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_suppliers_address">Enter Suppliers Address</string>
    <string name="suppliers_successfully_added">Suppliers Successfully Added</string>
    <string name="failed">Failed</string>
    <string name="product_name_cannot_be_empty">Product name can\'t be empty!</string>
    <string name="product_code_cannot_be_empty">Product code can\'t be empty!</string>
    <string name="product_category_cannot_be_empty">Product category can\'t be empty!</string>
    <string name="product_sell_price_cannot_be_empty">Product sell price can\'t be empty!</string>
    <string name="product_weight_cannot_be_empty">Product weight can\'t be empty!</string>
    <string name="product_successfully_added">Product Successfully Added</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="add_product">Add Product</string>
    <string name="product_details">Product Details</string>
    <string name="product_code">Product Code</string>
    <string name="product_description">Product Description</string>
    <string name="unit_product_sell_price">Unit Product Sell Price</string>
    <string name="product_sell_price">Product Sell Price</string>
    <string name="product_weight">Product Weight</string>
    <string name="select_product_weight_unit">Select Product Weight Unit</string>
    <string name="product_weight_unit">Product Weight Unit</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="product_supplier">Product Supplier</string>
    <string name="choose_product_image">Choose Product Image</string>
    <string name="year_2020">Year 2020</string>
    <string name="total_sales">Total Sales : </string>
    <string name="search_here">Search Here. . . .</string>
    <string name="no_order_found">No Order Found</string>
    <string name="no_product_found">No Product Found</string>
    <string name="submit_order">Submit Order</string>
    <string name="all_sales_report">All Sales Report</string>
    <string name="all_expense_report">All Expense Report</string>
    <string name="monthly_sales_graph">Monthly Sales Graph</string>
    <string name="monthly_expense_graph">Monthly Expense Graph</string>
    <string name="no_data_found">No Data Found</string>
    <string name="shop_information">Shop Information</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_contact_number">Shop Contact Number</string>
    <string name="shop_email">Shop Email</string>
    <string name="shop_address">Shop Address</string>
    <string name="edit">Edit</string>
    <string name="update_information">Update Information</string>
    <string name="product_category">Product Category</string>
    <string name="cancel">Cancel</string>
    <string name="payment">PAYMENT</string>
    <string name="submit">SUBMIT</string>
    <string name="product_name">Product Name</string>
    <string name="weight">Weight:</string>
    <string name="price">Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_contact_person">Supplier Contact Person</string>
    <string name="supplier_cell">Supplier Cell</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="supplier_address">Supplier Address</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="monthly_expense_in_graph">Monthly Expense in Graph</string>
    <string name="year">Year</string>
    <string name="monthly_expense_report">Monthly Expense Report</string>
    <string name="total_expense">Total Expense: </string>
    <string name="monthly_sales_report">Monthly Sales Report</string>
    <string name="all_expense">All Expense</string>
    <string name="yes">Yes</string>
    <string name="all_product">All Product</string>
    <string name="product_cart">Product Cart</string>
    <string name="no_product_in_cart">No Product in Cart</string>
    <string name="select_payment_method">SELECT PAYMENT METHOD</string>
    <string name="select_order_type">SELECT ORDER TYPE</string>
    <string name="select_customer">SELECT CUSTOMER</string>
    <string name="order_history">Order History</string>
    <string name="order_details">Order Details</string>
    <string name="total_price">Total Price: </string>
    <string name="add_expense">Add Expense</string>
    <string name="product_removed_from_cart">Product removed from cart</string>
    <string name="backup_completed_successfully">Backup Completed Successfully</string>
    <string name="unable_to_backup_database_retry">Unable to backup database. Retry</string>
    <string name="database_Import_completed">Database Import Completed</string>
    <string name="unable_to_import_database_retry">Unable to import database. Retry</string>
    <string name="want_to_delete_customer">Want to Delete Customer ?</string>
    <string name="customer_deleted">Customer Deleted</string>
    <string name="note">Note: </string>
    <string name="want_to_delete_expense">Want to Delete Expense ?</string>
    <string name="expense_deleted">Expense Deleted</string>
    <string name="payment_method">Payment Method:</string>
    <string name="want_to_delete_supplier">Want to Delete Supplier ?</string>
    <string name="supplier_deleted">Supplier Deleted</string>
    <string name="quantity">Quantity:</string>
    <string name="sell_price">Sell Price:</string>
    <string name="want_to_delete_product">Want to Delete Product ?</string>
    <string name="product_deleted">Product Deleted</string>
    <string name="product_added_to_cart">Product added to cart</string>
    <string name="product_already_added_to_cart">Product Already Added to Cart</string>
    <string name="product_added_to_cart_failed_try_again">Product added to cart failed! Try again</string>
    <string name="press_once_again_to_exit">Press once again to exit!</string>
    <string name="order_deleted">Order Deleted</string>
    <string name="want_to_delete_order">Want to Delete Order ?</string>
    <string name="type_something_to_search">Type something to search</string>
    <string name="expense_name_cannot_be_empty">Expense name can\'t be empty</string>
    <string name="expense_amount_cannot_be_empty">Expense amount can\'t be empty</string>
    <string name="expense_successfully_added">Expense Successfully Added</string>
    <string name="qr_barcode_scanner">QR or Barcode Scanner</string>
    <string name="camera_permission">Camera Permission Required</string>
    <string name="error">Error</string>
    <string name="order_receipt">Order Receipt</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="open_pdf">Open PDF</string>
    <string name="open_with_external_pdf_reader">Open with external pdf reader</string>
    <string name="generate_pdf_receipt">PDF Receipt</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="edit_suppliers">Edit Suppliers</string>
    <string name="expense_name">Expense Name</string>
    <string name="expense_note_if_any">Expense Note (if any)</string>
    <string name="expense_note">Expense Note</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="expense_date">Expense Date</string>
    <string name="expense_time">Expense Time</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="update_successfully">Update Successfully</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category Name</string>
    <string name="payment_method_deleted">Payment Method Deleted</string>
    <string name="want_to_delete">Want to delete ?</string>
    <string name="all_payment_method">All Payment Method</string>
    <string name="payment_method_name">Payment Method Name</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="enter_payment_method_name">Enter Payment Method Name</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="update_payment_method">Update Payment Method</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="logout">Logout</string>
    <string name="you_dont_have_permission_to_access_this_page">You don\'t have permission to access this page</string>
    <string name="about_us">About US</string>
    <string name="want_to_logout_from_app">Want to logout from app ?</string>
    <string name="delete">DELETE</string>
    <string name="tax">Tax</string>
    <string name="tax_in_percentage">Tax in percentage (%)</string>
    <string name="total_tax">Total Tax</string>
    <string name="sub_total">Sub Total:</string>
    <string name="discount">Discount:</string>
    <string name="discount_cant_be_greater_than_total_price">Discount can\'t be greater than total price</string>
    <string name="net_sales">Net Sales</string>
    <string name="total_discount">Total Discount</string>
    <string name="table_number">Table Number</string>
    <string name="order_success">Order Success</string>
    <string name="order_successfully_done">Order Successfully Done</string>
    <string name="email">Email</string>
    <string name="please_wait">Please wait. . .</string>
    <string name="no_network_connection">No network connection</string>
    <string name="products">Products</string>
    <string name="stock">Stock</string>
    <string name="low_stock">Low Stock</string>
    <string name="weekly">Weekly</string>
    <string name="all">All</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>