<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_sales_report"
        android:orderInCategory="100"
        android:title="@string/report"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/menu_all_sales"
                android:title="@string/all" />

            <item
                android:id="@+id/menu_daily"
                android:title="@string/daily" />


            <item
                android:id="@+id/menu_weekly"
                android:title="@string/weekly" />


            <item
                android:id="@+id/menu_monthly"
                android:title="@string/monthly" />

            <item
                android:id="@+id/menu_yearly"
                android:title="@string/yearly" />


        </menu>
    </item>
</menu>
