<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"

            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <ImageView
                        android:id="@+id/img_product"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/image_placeholder" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txt_stock_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/red"
                            android:paddingLeft="5dp"
                            android:paddingRight="3dp"
                            android:layout_alignParentStart="true"
                            android:paddingBottom="2dp"
                            android:text="@string/low_stock"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:visibility="visible" />
                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="3dp"
                        android:text="@string/product_name"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/sailec_regular" />

                    <TextView
                        android:id="@+id/txt_stock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/stock"
                        app:fontFamily="@font/sailec_regular" />

                    <TextView
                        android:id="@+id/txt_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/weight"
                        app:fontFamily="@font/sailec_regular" />

                    <TextView
                        android:id="@+id/txt_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/price"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        app:fontFamily="@font/sailec_regular" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_tax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/tax" />

                    </LinearLayout>

                    <com.balysv.materialripple.MaterialRippleLayout
                        style="@style/RippleStyleWhite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <Button
                            android:id="@+id/btn_add_cart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:background="@color/colorPrimary"
                            android:fontFamily="@font/sailec_regular"
                            android:text="@string/add_to_cart"
                            android:textColor="#fff"
                            android:textStyle="bold" />
                    </com.balysv.materialripple.MaterialRippleLayout>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>