<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".report.GraphReportActivity">


    <LinearLayout
        android:id="@+id/layout_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_select_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:drawableRight="@drawable/ic_arrow_down"
            android:fontFamily="@font/sailec_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/year_2020"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                app:shimmer_duration="800"
                tools:ignore="MissingConstraints">

                <!-- Adding 7 rows of placeholders -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />

                    <include layout="@layout/data_placeholder_layout" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barchart"
                android:layout_width="match_parent"
                android:layout_height="400dp">

            </com.github.mikephil.charting.charts.BarChart>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_total_sales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/sailec_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/total_sales"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_total_tax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/sailec_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/total_tax"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/sailec_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/discount"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_net_sales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/sailec_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/net_sales"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>