<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/shop_name" />

            <EditText
                android:id="@+id/etxt_shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/shop_name"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/shop_contact_number" />

            <EditText
                android:id="@+id/etxt_shop_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_border"

                android:fontFamily="@font/sailec_regular"
                android:hint="@string/shop_contact_number"
                android:inputType="phone"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/shop_email" />

            <EditText
                android:id="@+id/etxt_shop_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:hint="@string/shop_email"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sailec_regular"
                android:padding="5dp"
                android:text="@string/shop_address" />

            <EditText
                android:id="@+id/etxt_shop_address"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/round_border"
                android:fontFamily="@font/sailec_regular"
                android:gravity="start"
                android:hint="@string/shop_address"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>